--- a/backendexp/config.env
+++ b/backendexp/config.env
@@ -1,3 +1,3 @@
 PORT=8000
-MONGO_URI=mongodb+srv://prathyusha:prathyusha@cluster0.gt1x8p9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://<username>:<pass>@cluster0.gt1x8p9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
